# demo-playwright

./: pyproject.toml  test_generate.py
.github/workflows/: main.yml
