[tool.poetry]
name = "playwright-demo"
version = "0.1.0"
description = ""
authors = ["Dominik Hlavac Duran <dhlavacd@redhat.com>"]
readme = "README.md"
packages = [{include = "playwright_demo"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
